@@ -3,6 +3,8 @@ DOMjudge Programming Contest Judging System
 Version 2.1.0 - SVN
 -------------------
  - Drop tempfile and mkstemps binaries, they are not necessary.
+ - Change runguard license to GPL 2 or higher. The current code
+   is a different implementation of the original idea from timeout.
 
 Version 2.0.0 - SVN
 -------------------
